@@ -38,6 +38,7 @@ struct fuse {
     struct fuse_context *(*getcontext)(struct fuse *);
     struct fuse_context context;
     pthread_key_t context_key;
+    volatile int exited;
 };
 
 struct fuse_dirhandle {
